fix: shift select

--- a/client/src/styles/sideBar.less
+++ b/client/src/styles/sideBar.less
@@ -61,6 +61,9 @@
         svg { background: #0d122a; }
       }
     }
+    &:first-child li:hover svg {
+      background: #c80000 !important;
+    }
   }
 
   .storeInfo  {
